--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "serve": "node ./server.js",
     "start": "npm run build && npm run serve",
     "lint": "eslint .",
-    "test": "npm run lint && echo \"Error: no test specified\" && exit 1"
+    "test": "npm run lint && echo \"No Node.js tests have been written\" && exit 1",
+    "test-browser": "http-server ./ -p 8081"
   },
   "author": "Noah Leigh",
   "license": "MIT",
@@ -30,6 +31,7 @@
     "eslint-plugin-standard": "^3.0.1",
     "file-loader": "^1.1.6",
     "html-webpack-plugin": "^2.30.1",
+    "http-server": "^0.11.1",
     "source-map-loader": "^0.2.3",
     "style-loader": "^0.19.1",
     "webpack": "^3.10.0",
@@ -46,5 +48,8 @@
   "bugs": {
     "url": "https://github.com/noahleigh/animated-pixel-gradients/issues"
   },
-  "homepage": "https://github.com/noahleigh/animated-pixel-gradients#readme"
+  "homepage": "https://github.com/noahleigh/animated-pixel-gradients#readme",
+  "directories": {
+    "test": "test"
+  }
 }
