--- a/package.json
+++ b/package.json
@@ -17,8 +17,7 @@
     "dotenv": "^4.0.0",
     "express": "^4.16.2",
     "gif.js": "^0.2.0",
-    "mainloop.js": "^1.0.4",
-    "puppeteer": "^1.0.0"
+    "mainloop.js": "^1.0.4"
   },
   "devDependencies": {
     "clean-webpack-plugin": "^0.1.17",
