Added engines to package.json

--- a/package.json
+++ b/package.json
@@ -50,5 +50,8 @@
   "homepage": "https://github.com/noahleigh/animated-pixel-gradients#readme",
   "directories": {
     "test": "test"
+  },
+  "engines": {
+    "node": "^8.x"
   }
 }
