Added conditional building so we don't run webpack so much

--- a/.gitignore
+++ b/.gitignore
@@ -60,5 +60,11 @@ typings/
 # Visual Studio Code
 .vscode
 
+# build-if-changed cache dir
+.buildifchanged
+
 # My build directory
 build
+
+# Notes file
+notes.txt
