--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "express": "^4.16.2",
     "gif.js": "^0.2.0",
     "helmet": "^3.10.0",
-    "mainloop.js": "^1.0.4"
+    "jquery": "^3.3.1",
+    "mainloop.js": "^1.0.4",
+    "spectrum-colorpicker": "^1.8.0"
   },
   "devDependencies": {
     "build-if-changed": "^0.1.2",
