--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "helmet": "^3.10.0",
     "jquery": "^3.3.1",
     "mainloop.js": "^1.0.4",
+    "opentype.js": "^0.7.3",
     "spectrum-colorpicker": "^1.8.0"
   },
   "devDependencies": {
