--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "http-server": "^0.11.1",
     "source-map-loader": "^0.2.3",
     "style-loader": "^0.20.1",
+    "uglifyjs-webpack-plugin": "^1.1.8",
     "webpack": "^3.10.0",
     "worker-loader": "^1.1.0"
   },
