--- a/package.json
+++ b/package.json
@@ -29,11 +29,11 @@
     "build-if-changed": "^0.1.2",
     "clean-webpack-plugin": "^0.1.18",
     "css-loader": "^0.28.9",
-    "eslint": "^4.16.0",
-    "eslint-config-standard": "^11.0.0-beta.0",
-    "eslint-plugin-import": "^2.8.0",
-    "eslint-plugin-node": "^5.2.1",
-    "eslint-plugin-promise": "^3.6.0",
+    "eslint": "^4.18.2",
+    "eslint-config-standard": "^11.0.0",
+    "eslint-plugin-import": "^2.9.0",
+    "eslint-plugin-node": "^6.0.1",
+    "eslint-plugin-promise": "^3.7.0",
     "eslint-plugin-standard": "^3.0.1",
     "file-loader": "^1.1.6",
     "html-webpack-plugin": "^2.30.1",
