--- a/package.json
+++ b/package.json
@@ -4,10 +4,12 @@
   "description": "Make pixelated gradient GIFs with words",
   "main": "server.js",
   "scripts": {
-    "webpack": "webpack",
+    "webpack": "webpack --mode production",
+    "webpack-dev": "webpack --mode development",
     "build": "build-if-changed",
     "serve": "node ./server.js",
     "start": "npm run build && npm run serve",
+    "start-dev": "npm run webpack-dev && npm run serve",
     "lint": "eslint .",
     "test": "npm run lint && echo \"No Node.js tests have been written\" && exit 1",
     "test-browser": "http-server ./ -p 8081",
@@ -27,23 +29,24 @@
   },
   "devDependencies": {
     "build-if-changed": "^0.1.2",
-    "clean-webpack-plugin": "^0.1.18",
-    "css-loader": "^0.28.9",
+    "clean-webpack-plugin": "^0.1.19",
+    "css-loader": "^0.28.10",
     "eslint": "^4.18.2",
     "eslint-config-standard": "^11.0.0",
     "eslint-plugin-import": "^2.9.0",
     "eslint-plugin-node": "^6.0.1",
     "eslint-plugin-promise": "^3.7.0",
     "eslint-plugin-standard": "^3.0.1",
-    "file-loader": "^1.1.6",
-    "html-webpack-plugin": "^2.30.1",
+    "file-loader": "^1.1.11",
+    "html-webpack-plugin": "^3.0.6",
     "http-server": "^0.11.1",
     "jsdoc": "^3.5.5",
     "source-map-loader": "^0.2.3",
-    "style-loader": "^0.20.1",
-    "uglifyjs-webpack-plugin": "^1.1.8",
-    "webpack": "^3.10.0",
-    "worker-loader": "^1.1.0"
+    "style-loader": "^0.20.2",
+    "uglifyjs-webpack-plugin": "^1.2.2",
+    "webpack": "^4.1.1",
+    "webpack-cli": "^2.0.10",
+    "worker-loader": "^1.1.1"
   },
   "repository": {
     "type": "git",
