--- a/package.json
+++ b/package.json
@@ -15,37 +15,37 @@
     "test-browser": "http-server ./ -p 8081",
     "build-docs": "jsdoc -d ./docs -c ./.jsdoc.config.json ./src ./README.md"
   },
-  "author": "Noah Leigh",
+  "author": "Noelle Leigh",
   "license": "MIT",
   "dependencies": {
     "dotenv": "^5.0.1",
-    "express": "^4.16.3",
+    "express": "^4.17.1",
     "gif.js": "^0.2.0",
-    "helmet": "^3.12.0",
-    "jquery": "^3.3.1",
+    "helmet": "^3.18.0",
+    "jquery": "^3.4.1",
     "mainloop.js": "^1.0.4",
     "opentype.js": "^0.8.0",
     "spectrum-colorpicker": "^1.8.0"
   },
   "devDependencies": {
     "build-if-changed": "^0.1.2",
-    "clean-webpack-plugin": "^0.1.19",
-    "css-loader": "^0.28.10",
-    "eslint": "^4.18.2",
+    "clean-webpack-plugin": "^3.0.0",
+    "css-loader": "^3.0.0",
+    "eslint": "^4.19.1",
     "eslint-config-standard": "^11.0.0",
-    "eslint-plugin-import": "^2.9.0",
+    "eslint-plugin-import": "^2.18.0",
     "eslint-plugin-node": "^6.0.1",
-    "eslint-plugin-promise": "^3.7.0",
-    "eslint-plugin-standard": "^3.0.1",
+    "eslint-plugin-promise": "^3.8.0",
+    "eslint-plugin-standard": "^3.1.0",
     "file-loader": "^1.1.11",
-    "html-webpack-plugin": "^3.0.6",
+    "html-webpack-plugin": "^3.2.0",
     "http-server": "^0.11.1",
-    "jsdoc": "^3.5.5",
-    "source-map-loader": "^0.2.3",
+    "jsdoc": "^3.6.2",
+    "source-map-loader": "^0.2.4",
     "style-loader": "^0.20.3",
-    "uglifyjs-webpack-plugin": "^1.2.3",
-    "webpack": "^4.20.2",
-    "webpack-cli": "^3.1.2",
+    "uglifyjs-webpack-plugin": "^1.3.0",
+    "webpack": "^4.35.3",
+    "webpack-cli": "^3.3.5",
     "worker-loader": "^1.1.1"
   },
   "repository": {
