--- a/package.json
+++ b/package.json
@@ -22,10 +22,8 @@
     "express": "^4.17.1",
     "gif.js": "^0.2.0",
     "helmet": "^3.18.0",
-    "jquery": "^3.4.1",
     "mainloop.js": "^1.0.4",
-    "opentype.js": "^0.8.0",
-    "spectrum-colorpicker": "^1.8.0"
+    "opentype.js": "^0.8.0"
   },
   "devDependencies": {
     "build-if-changed": "^0.1.2",
