--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "jsdoc": "^3.6.2",
     "source-map-loader": "^0.2.4",
     "style-loader": "^0.20.3",
-    "uglifyjs-webpack-plugin": "^1.3.0",
+    "terser-webpack-plugin": "^1.3.0",
     "webpack": "^4.35.3",
     "webpack-cli": "^3.3.5",
     "worker-loader": "^2.0.0"
