--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "terser-webpack-plugin": "^1.3.0",
     "webpack": "^4.35.3",
     "webpack-cli": "^3.3.5",
+    "webpack-subresource-integrity": "^1.3.2",
     "worker-loader": "^2.0.0"
   },
   "repository": {
