--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,5 +1,20 @@
 {
-    "extends": "standard",
+    "env": {
+        "browser": true,
+        "es6": true,
+        "node": true
+    },
+    "extends": [
+        "standard"
+    ],
+    "globals": {
+        "Atomics": "readonly",
+        "SharedArrayBuffer": "readonly"
+    },
+    "parserOptions": {
+        "ecmaVersion": 2018,
+        "sourceType": "module"
+    },
     "rules": {
         "valid-jsdoc": ["error", {
             "requireReturn": false,
