--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "animated-pixel-gradients",
-  "version": "1.0.1",
+  "version": "2.0.0",
   "description": "Make pixelated gradient GIFs with words",
   "main": "server.js",
   "scripts": {
@@ -59,5 +59,8 @@
   "homepage": "https://github.com/noelleleigh/animated-pixel-gradients#readme",
   "directories": {
     "test": "test"
+  },
+  "engines": {
+    "node": "12"
   }
 }
