--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
     "start": "npm run build && npm run serve",
     "start-dev": "npm run webpack-dev && npm run serve",
     "lint": "eslint .",
-    "test": "npm run lint && echo \"No Node.js tests have been written\" && exit 1",
-    "build-docs": "jsdoc -d ./docs -c ./.jsdoc.config.json ./src ./README.md"
+    "test": "npm run lint && echo \"No Node.js tests have been written\" && exit 1"
   },
   "author": "Noelle Leigh",
   "license": "MIT",
@@ -28,15 +27,8 @@
     "build-if-changed": "^0.1.2",
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^3.6.0",
-    "eslint": "^7.11.0",
-    "eslint-config-standard": "^14.1.1",
-    "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^4.2.1",
-    "eslint-plugin-standard": "^4.0.1",
     "file-loader": "^6.0.0",
     "html-webpack-plugin": "^3.2.0",
-    "jsdoc": "^3.6.3",
     "source-map-loader": "^0.2.4",
     "style-loader": "^0.23.1",
     "terser-webpack-plugin": "^1.3.0",
