--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,18 +1,16 @@
 {
     "env": {
         "browser": true,
-        "es6": true,
+        "es2021": true,
         "node": true
     },
     "extends": [
         "standard"
     ],
-    "globals": {
-        "Atomics": "readonly",
-        "SharedArrayBuffer": "readonly"
-    },
     "parserOptions": {
-        "ecmaVersion": 2018,
+        "ecmaVersion": 12,
         "sourceType": "module"
+    },
+    "rules": {
     }
 }
