--- a/package.json
+++ b/package.json
@@ -4,14 +4,11 @@
   "description": "Make pixelated gradient GIFs with words",
   "main": "server.js",
   "scripts": {
-    "webpack": "webpack --mode production",
-    "webpack-dev": "webpack --mode development",
-    "build": "build-if-changed",
-    "serve": "node ./server.js",
-    "start": "npm run build && npm run serve",
-    "start-dev": "npm run webpack-dev && npm run serve",
-    "lint": "eslint .",
-    "test": "npm run lint && echo \"No Node.js tests have been written\" && exit 1"
+    "build:prod": "webpack --config webpack.prod.js",
+    "build:dev": "webpack --config webpack.dev.js",
+    "serve": "node server.js",
+    "start": "npm run build:prod && env NODE_ENV=production npm run serve",
+    "start:dev": "npm run build:dev && env NODE_ENV=development npm run serve"
   },
   "author": "Noelle Leigh",
   "license": "MIT",
@@ -24,23 +21,12 @@
     "opentype.js": "^1.3.3"
   },
   "devDependencies": {
-    "build-if-changed": "^0.1.2",
-    "clean-webpack-plugin": "^3.0.0",
-    "css-loader": "^3.6.0",
-    "eslint": "^7.26.0",
-    "eslint-config-standard": "^16.0.2",
-    "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^4.3.1",
-    "file-loader": "^6.0.0",
-    "html-webpack-plugin": "^3.2.0",
-    "source-map-loader": "^0.2.4",
-    "style-loader": "^0.23.1",
-    "terser-webpack-plugin": "^1.3.0",
-    "webpack": "^4.43.0",
+    "css-loader": "^6.5.1",
+    "html-webpack-plugin": "^5.5.0",
+    "style-loader": "^3.3.1",
+    "webpack": "^5.64.0",
     "webpack-cli": "^4.9.1",
-    "webpack-subresource-integrity": "^1.5.1",
-    "worker-loader": "^2.0.0"
+    "webpack-merge": "^5.8.0"
   },
   "repository": {
     "type": "git",
